feat: first version
automatic bilibili live daily management, with following features:
* main site
  * login
  * watch video
  * share video
* live site
  * daily sign
  * group daily sign
  * send danmu to medal live room for light up and intimacy
  * send free gifts in bag
  * loot little heart fastly

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,6 @@ indent_size = 4
 [{package.json,*.yml,nightwatch.json}]
 indent_style = space
 indent_size = 2
+
+[.cookies]
+insert_final_newline = false
