--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "nodemon --watch 'src/' -e ts --exec 'ts-node' ./src/app.ts",
-    "dev": "NODE_ENV=development nodemon --watch 'src/' -e ts --exec 'ts-node' ./src/app.ts",
+    "start": "node --loader ts-node/esm ./src/app.ts",
+    "dev": "NODE_ENV=development node --loader ts-node/esm ./src/app.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "test": "mocha"
@@ -15,19 +16,23 @@
   "author": "Rhythm",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
-    "pino": "^7.5.1"
+    "got": "^12.0.0",
+    "pino": "^7.6.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.13",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^7.12.1",
+    "@types/crypto-js": "^4.0.2",
+    "@types/node": "^16.6.1",
+    "@types/tough-cookie": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-mocha": "^10.0.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1 || ^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "pino-pretty": "^7.3.0",
