--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "got": "^12.0.0",
-    "pino": "^7.6.1"
+    "winston": "^3.4.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.2",
@@ -35,7 +35,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "pino-pretty": "^7.3.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
