--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,8 @@ ROOM_ID=21452505,21919321
 SEND_GIFT_TYPE=1,6,30607
 # 自动送礼礼物过期时间（天）
 SEND_GIFT_TIME=1
-# 自动获取小心心
-LITTLE_HEART=1
+# 自动点赞直播间
+LIKE=1
 # PushDeer PushKey
 PUSHKEY=
 # CRON 表达式
