refactor: like -> likeLive

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ SEND_GIFT_TYPE=1,6,30607
 # 自动送礼礼物过期时间（天）
 SEND_GIFT_TIME=1
 # 自动点赞直播间
-LIKE=1
+LIKE_LIVE=1
 # 自动分享直播间
 SHARE_LIVE=1
 # PushDeer PushKey
