--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc --project ./",
     "start": "node --loader ts-node/esm ./src/app.ts",
     "dev": "NODE_ENV=development node --loader ts-node/esm ./src/app.ts",
+    "dev:cookies": "node --loader ts-node/esm ./src/cookies.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "test": "mocha"
@@ -20,12 +21,14 @@
     "dotenv": "^10.0.0",
     "got": "^12.0.0",
     "node-cron": "^3.0.0",
+    "qrcode-terminal": "^0.12.0",
     "winston": "^3.4.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.2",
     "@types/node": "^16.6.1",
     "@types/node-cron": "^3.0.1",
+    "@types/qrcode-terminal": "^0.12.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
