feat: auto use b coin coupon
for charge or live battery

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,18 @@ LOGIN=1
 WATCH_VIDEO=1
 # 分享视频
 SHARE_VIDEO=1
+# 自动领取年度大会员B币卷
+GET_COUPON=1
+# 自动使用年度大会员B币卷
+USE_COUPON=1
+# B币卷用途（1 - 用于给自己充电, 2 - 用于兑换直播电池）
+USE_COUPON_MODE=1
+# B币卷过期时间（天）
+USE_COUPON_TIME=2
+# 剩余B币卷兑换直播电池（由于充电至少需要2B币，如果启用此项，在B币卷小于2时兑换为直播电池）
+USE_COUPON_REST=1
+# 用于给自己充电时的留言
+CHARGE_MSG=⚡️
 # 直播区签到
 LIVE_DAILY_SIGN=1
 # 应援团签到
