--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node16"
     }
 }
