--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "bilibili-live-helper",
   "version": "1.2.0",
   "description": "",
-  "main": "app.js",
   "type": "module",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "node --loader ts-node/esm ./src/app.ts",
+    "start": "node dist/app.js",
+    "start:cookies": "node dist/cookies.js",
     "dev": "NODE_ENV=development node --loader ts-node/esm ./src/app.ts",
     "dev:cookies": "node --loader ts-node/esm ./src/cookies.ts",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
-    "test": "mocha"
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix"
   },
   "keywords": [],
   "author": "Rhythm",
@@ -32,11 +31,9 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
