--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
         "project": "./tsconfig.json"
     },
     "rules": {
+        "no-await-in-loop": "off",
+        "no-continue": "off",
+        "no-promise-executor-return": "off",
         "no-console": "off",
         "import/extensions": ["error", "ignorePackages"],
         "@typescript-eslint/indent": ["error", 4]
