--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "parser": "@typescript-eslint/parser",
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/strict-type-checked",
+        "plugin:@typescript-eslint/stylistic-type-checked",
         "airbnb-base",
         "airbnb-typescript/base"
     ],
@@ -11,7 +12,7 @@
         "@typescript-eslint"
     ],
     "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": true
     },
     "rules": {
         "no-await-in-loop": "off",
@@ -19,6 +20,7 @@
         "no-promise-executor-return": "off",
         "no-console": "off",
         "import/extensions": ["error", "ignorePackages"],
-        "@typescript-eslint/indent": ["error", 4]
+        "@typescript-eslint/indent": ["error", 4],
+        "@typescript-eslint/prefer-for-of": "off"
     }
 }
