--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "node dist/app.js",
-    "start:cookies": "node dist/cookies.js",
-    "dev": "NODE_ENV=development node --loader ts-node/esm ./src/app.ts",
-    "dev:cookies": "node --loader ts-node/esm ./src/cookies.ts",
+    "start": "ts-node-esm src/app.ts",
+    "start:cookies": "ts-node-esm src/scripts/cookies.js",
+    "dev": "NODE_ENV=development ts-node-esm src/app.ts",
+    "dev:cookies": "NODE_ENV=development ts-node-esm src/scripts/cookies.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix"
   },
