--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Rhythm",
   "license": "MIT",
   "dependencies": {
-    "crypto-js": "^4.1.1",
+    "crypto-es": "^2.0.4",
     "dotenv": "^16.3.1",
     "got": "^13.0.0",
     "node-cron": "^3.0.2",
@@ -24,7 +24,6 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.2",
     "@types/node": "^20.8.4",
     "@types/node-cron": "^3.0.9",
     "@types/qrcode-terminal": "^0.12.0",
