--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,9 @@ WATCH_LIVE=1
 PUSHKEY=
 # CRON 表达式
 CRON_EXP=30 5 0 * * *
+# CookieCloud URL
+COOKIE_CLOUD_URL=
+# CookieCloud UUID
+COOKIE_CLOUD_UUID=
+# CookieCloud KEY
+COOKIE_CLOUD_KEY=
