--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "build": "tsc --project ./",
-    "start": "ts-node-esm src/app.ts",
-    "start:cookies": "ts-node-esm src/scripts/cookies.ts",
-    "dev": "NODE_ENV=development ts-node-esm src/app.ts",
-    "dev:cookies": "NODE_ENV=development ts-node-esm src/scripts/cookies.ts",
+    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/app.ts",
+    "start:cookies": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/scripts/cookies.ts",
+    "dev": "NODE_ENV=development node --no-warnings=ExperimentalWarning --loader ts-node/esm src/app.ts",
+    "dev:cookies": "NODE_ENV=development node --no-warnings=ExperimentalWarning --loader ts-node/esm src/scripts/cookies.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix"
   },
