--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
   "name": "bilibili-live-helper",
-  "version": "1.2.0",
-  "description": "",
   "type": "module",
-  "scripts": {
-    "build": "tsc --project ./",
-    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/app.ts",
-    "start:cookies": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/scripts/cookies.ts",
-    "dev": "NODE_ENV=development node --no-warnings=ExperimentalWarning --loader ts-node/esm src/app.ts",
-    "dev:cookies": "NODE_ENV=development node --no-warnings=ExperimentalWarning --loader ts-node/esm src/scripts/cookies.ts",
-    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix"
-  },
-  "keywords": [],
+  "private": true,
   "author": "Rhythm",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc --project ./",
+    "start": "tsx src/app.ts",
+    "start:cookies": "tsx src/scripts/cookies.ts",
+    "dev": "NODE_ENV=development tsx src/app.ts",
+    "dev:cookies": "NODE_ENV=development tsx src/scripts/cookies.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "dependencies": {
-    "crypto-es": "^2.1.0",
     "dotenv": "^16.4.5",
-    "got": "^14.4.3",
     "node-cron": "^3.0.3",
-    "qrcode-terminal": "^0.12.0",
-    "winston": "^3.16.0"
+    "qrcode": "^1.5.4",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
+    "@rhyster/eslint-config": "^1.4.2",
     "@types/node": "^22.8.7",
     "@types/node-cron": "^3.0.11",
-    "@types/qrcode-terminal": "^0.12.2",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "ts-node": "^10.9.2",
+    "@types/qrcode": "^1.5.5",
+    "eslint": "^9.14.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@9.13.0"
 }
