--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "crypto-es": "^2.1.0",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "qrcode": "^1.5.4",
