feat: add watch live room id for new rules, as all medal can earn by now

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ LIKE_LIVE=0
 SHARE_LIVE=0
 # 自动观看直播
 WATCH_LIVE=1
+# 观看直播直播间（以英文逗号间隔）
+WATCH_LIVE_ROOM_ID=21452505,21919321
 # PushDeer PushKey
 PUSHKEY=
 # CRON 表达式
