--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: docker/setup-buildx-action@v3
         with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
 
       - uses: docker/login-action@v3
         with:
@@ -39,7 +39,7 @@ jobs:
         with:
           push: true
           tags: rhyster/bilibili-live-helper:latest
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
 
   deploy:
     needs: build
